# qore-llvm

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Doxyfile.in  README.md  Vagrantfile  cov  grammar.y
cmake/: Doxyfile.in  compiler-config.txt  coverage.txt  cppcheck.txt  define-options.txt  doxygen.txt  ffi.txt  gtest-include.txt  llvm.txt
include/: qore.h
include/qore/: Any.h  BinaryOperator.h  Conversion.h  Exception.h  Id.h  Int.h  RefCounted.h  String.h  Type.h  Value.h  qore.h
include/qore/analyzer/: Analyzer.h  Code.h  Entity.h  ExpressionAnalyzer.h  Scope.h  ScopeImpl.h  StatementAnalyzer.h
include/qore/as/: Id.h  as.h
include/qore/ast/: BaseVisitor.h  Expression.h  Node.h  Program.h  Rewriter.h  Statement.h  Visitor.h  ast.h
include/qore/cg/: CodeGen.h  cg.h
include/qore/common/: Exceptions.h  Indent.h  Loggable.h  Logging.h  Source.h  Util.h  common.h  logging.h
include/qore/comp/: Context.h  DiagData.inc  DiagManager.h  DiagRecord.h  DirectiveProcessor.h  IScanner.h  Parser.h  Scanner.h  (+8 more)
lib/: BinaryOperator.cpp  CMakeLists.txt  Conversion.cpp
lib/cg/: CMakeLists.txt  CodeGen.cpp  ExpressionCompiler.cpp  ExpressionCompiler.h  FunctionCompiler.cpp  FunctionCompiler.h  Helper.cpp  Helper.h  LValue.h  LValueCompiler.cpp  LValueCompiler.h  Locals.h  ScriptCompiler.cpp  ScriptCompiler.h  StatementCompiler.cpp  StatementCompiler.h  Value.h
lib/common/: CMakeLists.txt  Logging.cpp  common.cpp  logger.cpp
lib/comp/: CMakeLists.txt  DiagManager.cpp  DiagRecord.cpp  DirectiveProcessor.cpp  Parser-class.cpp  Parser-expression.cpp  Parser-namespace.cpp  Parser-recovery.cpp  Parser-routine.cpp  Parser-statement.cpp  Scanner.cpp  Source.cpp  SourceManager.cpp  Token.cpp
lib/comp/as/: Type.cpp
lib/comp/ast/: Closure.cpp
lib/comp/sem/: Analyzer.cpp  Builder.cpp  ClassScope.cpp  Core.cpp  ExpressionAnalyzerPass1.cpp  ExpressionAnalyzerPass1.h  ExpressionAnalyzerPass2.h  FunctionGroupInfo.cpp  FunctionOverloadPack.cpp  FunctionScope.cpp  GlobalVariableInfo.cpp  GlobalVariableRefExpression.cpp  LValue.h  NamespaceScope.cpp  ReportedError.h  StatementAnalyzerPass1.h  StatementAnalyzerPass2.h  TempHelper.cpp
lib/comp/semantic/: Analyzer.cpp  Namespace.cpp  NamespaceMemberCollector.h  ReportedError.h  TypeDeclarationCollector.h  TypeRegistry.cpp
lib/context/: CMakeLists.txt  DiagManager.cpp  DiagnosticManager.cpp  SourceManager.cpp
lib/core/: BinaryOperator.cpp  BinaryOperators.cpp  CMakeLists.txt  Conversion.cpp  Conversions.cpp  Data.cpp  FunctionGroup.cpp  SourceInfo.cpp  String.cpp
lib/core/code/: Instruction.cpp
lib/core/impl/: BinaryOperators.cpp  BinaryOperators.h  Conversions.cpp  Conversions.h
lib/core/util/: Logging.cpp
lib/in/: CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  Interpreter.cpp  LValue.h  LValueEvaluator.cpp  LValueEvaluator.h  StatementExecutor.cpp  StatementExecutor.h  Value.h
lib/ir/: CMakeLists.txt  Globals.cpp
lib/nrt/: CMakeLists.txt  nrt.cpp
lib/parser/: CMakeLists.txt  ParserImpl.cpp  lexer.l  parser.ypp  parserImpl.cpp
lib/qil/: CMakeLists.txt  Instruction.cpp  StringLiteral.cpp  Variable.cpp
lib/rt/: CMakeLists.txt  Conversions.cpp  Func.cpp  Meta.cpp
lib/runtime/: CMakeLists.txt  runtime.cpp
lib/scanner/: CMakeLists.txt  ScannerImpl.cpp  Token.cpp
qtif/directives/: args.qtif  include.qtif
qtif/parser/: class-err.qtif  class.qtif  expr-assign.qtif  expr-binary.qtif  expr-call.qtif  expr-closure.qtif  expr-cond.qtif  expr-hash.qtif  expr-list-op.qtif  expr-list.qtif  expr-log.qtif  expr-misc.qtif  expr-new.qtif  expr-postfix-err.qtif  expr-postfix.qtif  expr-prefix.qtif  expr-primary-err.qtif  expr-primary.qtif  expr-relational.qtif  expr-vardecl.qtif  modifiers.qtif  module.qtif  names.qtif  namespace-eof.qtif  namespace-err.qtif  namespace-func-nosub.qtif  namespace-func.qtif  namespace-stmt-err.qtif  namespace.qtif  recovery-curly-right-eof.qtif  recovery-semicolon.qtif  statements-err.qtif  statements.qtif  top-level-func-nosub.qtif  top-level-func.qtif
qtif/qtif/: test1.qtif  test2.qtif
qtif/scanner/: basic.qtif  block_comment.qtif  detail.qtif  dirparam.qtif  hex.qtif  implicit_arg.qtif  line_comment.qtif  nows-basic.qtif  nows-block_comment.qtif  nows-line_comment.qtif  nows-strings.qtif  strings.qtif
qtif/semantic/: class-err.qtif  class-resolve-err.qtif  class-resolve.qtif  decl-err.qtif  decl.qtif  example.qtif  expr-assign.qtif  namespace-err.qtif  namespace-parent.qtif  type-resolve.qtif
test/: CMakeLists.txt  CPPLINT.cfg  Qtif.h  UnitTestsMain.cpp  Utils.h  main.cpp  test_files.inc.in
test/ast/: AstTestHelper.h  ExpressionTest.cpp  Mocks.h  ProgramTest.cpp  StatementTest.cpp
test/ast/dump/: DumpVisitorTest.cpp
test/common/: ExceptionsTest.cpp  IndentTest.cpp  LoggingTest.cpp  UtilTest.cpp
test/comp/: AnalyzerTest.cpp  DiagManagerTest.cpp  DiagRecordTest.cpp  DirectiveProcessorTest.cpp  MockDiagProcessor.h  ParserTest.cpp  ScannerTest.cpp  SourceManagerTest.cpp  SourceTest.cpp  TokenTest.cpp
test/comp/ast/: ModifiersTest.cpp
test/context/: DiagManagerTest.cpp  DiagRecordTest.cpp  DiagTestHelper.h  Helpers.h  Mocks.h  SourceBufferTest.cpp  SourceIdTest.cpp  SourceLocationTest.cpp  SourceManagerTest.cpp  SourcePointerTest.cpp  SourceRangeTest.cpp  SourceTest.cpp  SourceTestHelper.h
test/core/: TypeTest.cpp
test/core/util/: IndentTest.cpp  IteratorsTest.cpp  LoggableTest.cpp  LoggingTest.cpp  UtilTest.cpp
test/parser/: CMakeLists.txt  ParserImplTest.cpp  test1.cpp
test/pdp/: CommentStripperTest.cpp  DirectiveParserTest.cpp
test/qtif/: AbstractTest.cpp  AbstractTest.h  Core.h  LineTest.cpp  LineTest.h  QtifTest.cpp  Reader.h  SimpleTest.h
test/scanner/: Mocks.h  ScannerImplTest.cpp  ScannerTestHelper.h  TokenTest.cpp
tests/qtif/: test2.qtif
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  analysis.h  ast.h  driver.cpp  dump.h  gen.h  gen2.h  interpret.h  lexer.l  parser.ypp  runner.h  sandbox.cpp
tools/qorec/: CMakeLists.txt  DiagPrinter.h  Interactive.cpp  Interactive.h  qorec.cpp
tools/sandbox/: CMakeLists.txt  main.cpp  test.q
(+246 files in other folders)
